assets/css/style.css
/* Header element is flex container: H1, H2, Toby Image are flex items */
.header-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
    background-color:#ADCF9F;
    max-width: 100%;
    max-height: 110%;
    padding: 2% 0 2% 0;
    margin: 0;
}

/* Menu below is a chile of the header but also a parent of the h1/h2 so it also needs to display flex and have attributes like a parent */
.menu-div-flex-item {
    order: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

h1 {
    font-size: 500%;
}

#header-h2 {
    font-style: italic;
}

#Toby-image {
    justify-content: flex-start;
    margin-top: 2%;
    margin-bottom: 2%;
    max-width: 350px;
    max-height: 350px;
    border-radius: 50%;
    padding: 2px;
    border: 1px solid white;
    box-shadow: 0px 0px 20px white;
}

/* Marker to break up header and menu content CSS */

nav {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    max-width: 100%;
    background-color:#76BA99;
}

.menu-box {
    display: flex;
    flex: 1 0 350px;
    margin: 4px;
    padding: 2px;
    justify-content: space-around;
    text-align:center;
    border-style: solid;
    border-color: #CED89E;
    border-radius: 5px;
}

.menu-box:hover {
    background-color: #FFDCAE;
}

.menu-box:active {
    border-radius: 10px;
    border-color:  rgb(25, 79, 25);
}

#sticky-nav {
    position : sticky;
     top :0;
}

a {
    color:  rgb(25, 79, 25);
    font-size: 150%;
    text-decoration: none;
}

a:hover {
    transform: scale(1.2); 
    transition: 0.5s;
}

main{
    background-color: #FFDCAE;
}

/* Marker to break up menu and body content CSS */
.content-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
    padding: 2%;
}

.content-box {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    background-color: #CED89E;
    border: 1px solid white;
    border-radius: 30px;
    box-shadow: 0px 0px 20px white;
    padding: 2% 4% 2% 4%;
    text-align: center;
    width: 95%;
    margin: 1%;
}

.content-box h3 {
    font-size: 150%;
    padding: 5px 0 5px 0;
}

p {
    margin-top: 20px;
}

.large-image-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}

.large-image {
    width: 1000px;
    margin: 2%;
}

.large-image-text-box {
    position: absolute;
    bottom: 80px;
    right: 19%;
    background-color:rgba(255, 255, 255, 0.701);
    color: black;
    padding: 10px;
    width: 30%;
}

.image-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    height: 500px;
    padding: 0%;
}

.full-image-div {
    padding: 2%;
}

.image-text-container {
    position: relative;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.image-text-box {
    position: absolute;
    bottom: 20px;
    right: 5%;
    background-color:rgba(255, 255, 255, 0.701);
    color: black;
    padding: 10px;
    width: 70%;
}

.zoom {
    max-height: 100%;
    border: solid white;
    box-shadow: 4px 4px 20px white;
    margin: 5%;
    transition: 1s;
}

.zoom:hover {
    transform: scale(1.2); 
}

img:hover {
    border: 2px solid white;
    box-shadow: 0px 0px 50px pink;
}

img:active {
filter: blur(4px);
box-shadow: 0px 0px 50px rgb(248, 250, 248);
transition: 5ms;
}

/*
@media screen and (max-width: 992px) {
    .zoom {
      max-height: 500px;
      aspect-ratio: 0.67/1;
    }
  }

